local-setup/pubi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubi
spec:
  selector:
    matchLabels:
      app: pubi
  template:
    metadata:
      labels:
        app: pubi
    spec:
      containers:
      - name: pubi
        image: pubisubi-pubi:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
