local-setup/pubi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pubi
spec:
  selector:
    app: pubi
  ports:
  - port: 80
    targetPort: 80
