local-setup/pubi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pubi
  labels:
    name: pubi
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pubi
            port: 
              number: 80
